--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,3 +1,15 @@
 .content {
   padding: 0 20px;
 }
+
+@media screen and (max-width: 627px) {
+  .content {
+    padding: 0 16px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .content {
+    padding: 0;
+  }
+}
