--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -10,7 +10,7 @@
   margin-right: 20px;
   width: 190px;
   height: 190px;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .profile__column {
@@ -27,11 +27,16 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
+  color: #212121;
+  font-size: 2rem;
+  line-height: 1;
 }
 
 .profile__description {
   margin: 0;
   font-weight: 500;
+  font-size: 1rem;
+  line-height: 1;
   color: #212121;
   opacity: 70%;
   display: -webkit-box;
@@ -44,7 +49,7 @@
 
 .profile__edit-btn {
   margin-top: auto;
-  background-color: #fcf5e5;
+  background-color: transparent;
   color: #212121;
   border: none;
   padding: 0;
@@ -52,8 +57,12 @@
   gap: 8px;
   width: fit-content;
   height: fit-content;
+  transition: opacity 0.3s;
   opacity: 70%;
   cursor: pointer;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 1;
 }
 
 .profile__edit-btn:hover {
@@ -67,14 +76,18 @@
   color: #fcf5e5;
   width: 149px;
   height: 52px;
-  border-radius: 10px;
+  border-radius: 8px;
   font-weight: 500;
   display: flex;
   align-items: center;
   align-self: flex-end;
   gap: 8px;
   padding: 18px 24px;
+  transition: opacity 0.3s;
   cursor: pointer;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 1;
 }
 
 .profile__add-btn:hover {
