new card submission, button updates, preview modal

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,3 +1,7 @@
+.card {
+  position: relative;
+}
+
 .card__image {
   height: 413px;
   width: 100%;
@@ -33,11 +37,36 @@
   border: none;
   background-color: transparent;
   opacity: 40%;
-  transition: opacity 0.2s;
+  transition: opacity 0.1s;
+}
+
+.card__like-btn_active {
+  background-image: url(../images/liked-image.svg);
+  opacity: 1;
 }
 
 .card__like-btn:hover {
-  opacity: 100%;
+  opacity: 1;
+}
+
+.card__like-btn_active:hover {
+  opacity: 0.4;
+}
+
+.card__delete-btn {
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+  background-image: url(../images/delete-icon.svg);
+  background-color: transparent;
+}
+
+.card__delete-btn:hover {
+  background-image: url(../images/delete-hover.svg);
+  transition-duration: 0.1s;
 }
 
 @media screen and (max-width: 627px) {
@@ -46,7 +75,7 @@
     width: 100%;
   }
 
-  .card__title {
+  .card__caption {
     font-size: 1rem;
     font-weight: 500;
     max-width: 250px;
