--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,14 +1,9 @@
 .content {
   padding: 0 20px;
+  flex: 1;
 }
 
 @media screen and (max-width: 627px) {
-  .content {
-    padding: 0 16px;
-  }
-}
-
-@media screen and (max-width: 400px) {
   .content {
     padding: 0;
   }
