--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,6 +2,8 @@
   background-color: #fcf5e5;
   min-height: 100vh;
   font-family: Poppins, Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 .page__section {
