add hover cursor, erase duplicate listeners, clear inputs

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -10,6 +10,10 @@
   border-radius: 8px;
 }
 
+.card__image:hover {
+  cursor: url("../images/hover-cursor.svg") 12 12, auto;
+}
+
 .card__content {
   display: flex;
   align-items: center;
@@ -40,6 +44,10 @@
   transition: opacity 0.1s;
 }
 
+.card__like-btn:hover {
+  cursor: url("../images/hover-cursor.svg") 12 12, auto;
+}
+
 .card__like-btn_active {
   background-image: url(../images/liked-image.svg);
   opacity: 1;
@@ -67,6 +75,7 @@
 .card__delete-btn:hover {
   background-image: url(../images/delete-hover.svg);
   transition-duration: 0.1s;
+  cursor: url("../images/hover-cursor.svg") 12 12, auto;
 }
 
 @media screen and (max-width: 627px) {
